apps/matrix/databases/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix
  annotations:
    external-dns.alpha.kubernetes.io/hostname: matrix.gruber.dev.br
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: matrix.gruber.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synapse-tailscale
            port:
              name: http
  tls:
  - hosts:
    - matrix.gruber.dev.br
    secretName: matrix-tls
